# florida-outages-mapped

./: README.md  data_prep.py  duke.parquet  fl_outages  fl_outages.db  fpl.parquet  parquet_to_db.py  pyproject.toml  teco.parquet
.github/workflows/: main.yml  scrape.yml
duke-energy.app/: counties.json
fplmaps.com/: StormFeedRestoration.json
outage.tecoenergy.com/: outage.json
