[project]
name = "florida-outages-mapped"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=24.10.0",
    "datasette>=0.65",
    "datasette-cluster-map>=0.18.2",
    "ipython>=8.28.0",
    "pyarrow>=17.0.0",
    "pandas>=2.2.3",
]
